--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.20"
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "sweetalert2": "^11.10.7"
   }
 }
