--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
+        "cors": "^2.8.5",
         "express": "^4.19.2",
         "nodemon": "^3.1.0"
     },
