--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
         "express": "^4.19.2",
+        "mongoose": "^8.3.3",
         "nodemon": "^3.1.0"
     },
     "devDependencies": {
