--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
     "name": "meddy",
     "version": "1.0.0",
     "scripts": {
+        "client": " cd .. && cd client && npm start",
         "server": "nodemon Server.js",
-        "dev": "concurrently --kill-others-on-fail \"npm run server\""
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
     },
     "dependencies": {
         "body-parser": "^1.18.3",
@@ -15,5 +16,4 @@
     "devDependencies": {
         "concurrently": "^4.1.2"
     }
-    
 }
