--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "mongoose": "^8.3.3",
