[FEAT]setting vapidKey & file modify

--- a/FirebaseVar.env
+++ b/FirebaseVar.env
@@ -1,12 +1,12 @@
-REACT_APP_API_KEY=your_api_key_here
-REACT_APP_API_URL=https://api.example.com
-
 // https://firebase.google.com/docs/web/setup#available-libraries
 
-FIREBASE_API_KEY = "AIzaSyDOJqGjyeDYj-2sjD5mHtYa3mg7vgYmdKo"
-FIREBASE_AUTH_DOMAIN = "pushalarm-bb5d9.firebaseapp.com"
-FIREBASE_PROJECT_ID = "pushalarm-bb5d9"
-FIREBASE_STORAGE_BUCKET = "pushalarm-bb5d9.appspot.com"
-FIREBASE_MESSAGING_SENDER_ID = "437147322701"
-FIREBASE_APP_ID = "1:437147322701:web:84a6dc85f14e7554ebcf04"
-FIREBASE_MEASUREMENT_ID = "G-83F9PD4SKG"
+REACT_APP_FIREBASE_API_KEY = "AIzaSyDOJqGjyeDYj-2sjD5mHtYa3mg7vgYmdKo"
+REACT_APP_FIREBASE_AUTH_DOMAIN = "pushalarm-bb5d9.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID = "pushalarm-bb5d9"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "pushalarm-bb5d9.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "437147322701"
+REACT_APP_FIREBASE_APP_ID = "1:437147322701:web:84a6dc85f14e7554ebcf04"
+REACT_APP_FIREBASE_MEASUREMENT_ID = "G-83F9PD4SKG"
+
+
+REACT_APP_VAPID_KEY = BHnxcIGV-w72P8cJhmFmmC_7NLdBYheI7M5VibqkVcK9ZuSmfqLcRTCq7vmNQnOAyrFm-Xl_ALrwE-8PBT7SxA4
