--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.1",
+    "firebase-admin": "^12.1.1",
     "sweetalert2": "^11.10.7"
   }
 }
