--- a/Medi/server/package.json
+++ b/Medi/server/package.json
@@ -10,7 +10,9 @@
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "firebase-admin": "^12.1.1",
         "mongoose": "^8.4.0",
         "node-cron": "^3.0.3",
         "nodemon": "^3.1.0",
