--- a/MeddyBaby/package.json
+++ b/MeddyBaby/package.json
@@ -4,5 +4,11 @@
   },
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase-admin": "^12.1.1",
+    "node-cron": "^3.0.3"
   }
 }
