--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-FIREBASE_API_KEY = "your Firebase Api Key"
-FIREBASE_AUTH_DOMAIN = "your Firebase Auth Domain"
-FIREBASE_PROJECT_ID = "your Firebase Project Id"
-FIREBASE_STORAGE_BUCKET = "your Firebase Storage Bucket"
-FIREBASE_MESSAGING_SENDER_ID = "your Firebase Messaging Sender Id"
-FIREBASE_APP_ID = "your Firebase App Id"
-FIREBASE_MEASUREMENT_ID = "your FireBase Measurement Id"
+FIREBASE_API_KEY = "AIzaSyBOsZ75zQYt_WXanx1G99Rn3jERGlZlhmo"
+FIREBASE_AUTH_DOMAIN = "meddybaby-724a7.firebaseapp.com"
+FIREBASE_PROJECT_ID = "meddybaby-724a7"
+FIREBASE_STORAGE_BUCKET = "meddybaby-724a7.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID = "474637271037"
+FIREBASE_APP_ID = "1:474637271037:web:0d96a06558e21216df6394"
+FIREBASE_MEASUREMENT_ID = "G-61BQQTRMXY"
 
-PORT='your port Number'
+
+VAPID_KEY = "BMyUUHhYKqkGbwthy1_ViopiWJzk2b4XnYJJsdeZJ3g1YQ_oOODH3imWRd2Cq-BD0ZlPRQdxFa7Xs7X9w6Gs2to"
+
+PORT=4000
